# spec-prompt

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agent/workflows/: generate-working-docs.md
.github/workflows/: build-test.yml  ci.yml  release.yml
docs/steering/: 01_product_requirements.md  02_functional_design.md  03_architecture_specifications.md  04_repository_structure.md  05_development_guidelines.md  06_ubiquitous_language.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  filesystem.rs  fonts.rs  git.rs  mod.rs  notification.rs  pty.rs  skills.rs
src-tauri/src/terminal/: event.rs  grid.rs  instance.rs  mod.rs
src/hooks/: useFileTree.ts  useGitBranch.test.ts  useGitBranch.ts  usePathInsertion.test.ts  usePathInsertion.ts  usePromptHistoryCursor.test.ts  usePromptHistoryCursor.ts  useTreeDnd.test.ts  useTreeDnd.ts
src/i18n/: index.ts
src/lib/: builtInCommands.test.ts  builtInCommands.ts  fontFamily.ts  frontmatter.test.ts  frontmatter.ts  gitStatus.ts  legacyStorageMigration.ts  markdown.ts  shikiLangs.ts  shortcuts.ts  slashQuery.ts  slashSuggestItem.test.ts  slashSuggestItem.ts  tauriApi.ts  templateApply.ts  templatePlaceholders.test.ts  templatePlaceholders.ts  templateValidation.ts  viewMode.test.ts  viewMode.ts  windowSession.test.ts  windowSession.ts
src/stores/: appStore.test.ts  appStore.ts  contentStore.test.ts  (+7 more)
(+281 files in other folders)
